# necto-scraper

./: LICENSE  Pipfile  README.md  pyproject.toml
src/web_scraper/: __init__.py  scraper.py  url_utils.py
