[project]
name = "necto-scraper"  
version = "0.0.1"  
description = "WebScraper for making concurrent webscraping utilizing multi-threading and asynchronous programming paradigms."  
readme = "README.md" 
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["webscraping", "concurrent", 'asynchronous']  
authors = [
  {name = "Livin Nector", email = "livinnector2001@gmail.com" } 
]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
