[project]
name = "necto-scraper"  
version = "0.0.1"  
description = "WebScraper for making concurrent webscraping utilizing multi-threading and asynchronous programming paradigms."  
readme = "README.md" 
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["webscraping", "concurrent", 'asynchronous']  
authors = [
  {name = "Livin Nector", email = "livinnector2001@gmail.com" } 
]
dependencies = [ # Optional
  "bs4",
  "requests",
  "aiohttp",
  "yarl"
]

[project.optional-dependencies] # Optional
dev = ["black","ipykernel"]
test = ["pytest","pytest-asyncio"]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
